fixed contrast in portfolios

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -315,19 +315,19 @@ html {
         }
 
         .item1 {
-          background: url("https://picsum.photos/id/10/200/300") no-repeat center center/cover;
+          background: url("https://picsum.photos/id/120/200/300") no-repeat center center/cover;
         }
         .item2 {
-          background: url("https://picsum.photos/id/26/200/300") no-repeat center center/cover;
+          background: url("https://picsum.photos/id/135/200/300") no-repeat center center/cover;
         }
         .item3 {
-          background: url("https://picsum.photos/id/33/200/300") no-repeat center center/cover;
+          background: url("https://picsum.photos/id/124/200/300") no-repeat center center/cover;
         }
         .item4 {
           background: url("https://picsum.photos/id/44/200/300") no-repeat center center/cover;
         }
         .item5 {
-          background: url("https://picsum.photos/id/58/200/300") no-repeat center center/cover;
+          background: url("https://picsum.photos/id/141/200/300") no-repeat center center/cover;
         }
         .item6 {
           background: url("https://picsum.photos/id/60/200/300") no-repeat center center/cover;
